# onmyoji-script

./: .gitignore  CMakeLists.txt  ExecutionSteps.cpp  ExecutionSteps.h  README.md  main.cpp
src/common/: ConfigManager.h  ConfigTypeEnum.cpp  ConfigTypeEnum.h  Logger.cpp  Logger.h  SettingManager.cpp  SettingManager.h  worker.cpp  worker.h
src/resource/: config.json  setting.json  yolo_label_catalog.json
src/resource/RapidOCR/models/: configs.txt
src/resource/log/: dx11_log.txt
src/utils/: ClassNameCache.cpp  ClassNameCache.h  DPIHelper.h  DetectionCatalog.cpp  DetectionCatalog.h  MouseSimulator.cpp  MouseSimulator.h  YOLODetector.cpp  YOLODetector.h  common.cpp  common.h
src/widget/editTask/: edittaskdialog.cpp  edittaskdialog.h  edittaskdialog.ui  ui_edittaskdialog.h
src/widget/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/widget/ocrForm/: OcrForm.cpp  OcrForm.h  OcrForm.ui  ui_OcrForm.h
src/widget/setting/: settingdialog.cpp  settingdialog.h  settingdialog.ui  ui_settingdialog.h
src/widget/temp/: temp.cpp  temp.h  temp.ui  ui_temp.h
src/widget/typeOpenCVForm/: ScreenCaptureWidget.cpp  ScreenCaptureWidget.h  typeopencvform.cpp  typeopencvform.h  typeopencvform.ui  ui_typeopencvform.h
src/widget/waitForm/: ui_waitform.h  waitform.cpp  waitform.h  waitform.ui
